--- a/textbooks.html
+++ b/textbooks.html
@@ -23,8 +23,9 @@
 	  padding: 16px;
 	  font-size: 20px;
 	  cursor: pointer;
-          border-radius: 10px;
-	  border: 2px solid blue;
+      border-radius: 10px;
+	  border: 2px solid red;
+	  margin-left: 10px;
 	}
 	.dropbtn:hover {
 	  border: 2px solid blue;
@@ -63,7 +64,19 @@
 	.dropdown:hover .dropdown-content {
 	  display: block;
 	}
-	
+	.bookeng {
+	  background-color: #FFAACC;
+	  color: green;
+	  padding: 16px;
+	  font-size: 20px;
+	  cursor: pointer;
+      border-radius: 10px;
+	  border: 2px solid red;
+	  margin-left: 10px;
+	}
+	.bookeng:hover {
+	  border: 2px solid blue;
+	}
 </style>
 
 </head>
@@ -80,10 +93,8 @@
 	    <div class="dropdown">
 	  <button class="dropbtn">Social Science</button>
 	  <div class="dropdown-content">
-		<a href="hess201.zip" download>History (chapter 1 to 5)</a>
-		<a href="hess206.zip" download>History (chapter 6 to 10)</a>
-		<a href="hess301.zip" download>Civics (chapter 1 to 5)</a>
-		<a href="hess306.zip" download>Civics (chapter 6 to 10)</a>
+		<a href="history.zip" download>history</a>
+		<a href="civics.zip" download>civics</a>
 		<a href="hess4dd.zip" download>Geography </a>
 		  </div>
 		</div>
@@ -91,9 +102,5 @@
 	<a href="Science.zip" download><button class="bookeng">Science</button></a>
 	<a href="Mathematics.zip" download><button class="bookeng">Maths </button></a>
 	<a href="class 8th Tamil_CBSE (1).pdf" download><button class="bookeng">Tamil</button></a>
-	
-		
-	
-		
-		
+</body>
 </html>
