--- a/maths_notes.html
+++ b/maths_notes.html
@@ -16,17 +16,17 @@
       >
       
        <style>
-      .mathsn {
+      .mathsn{
         cursor: pointer;
         width: 136px;
         height: 34px;
-        border-radius: 10px;
+        border-radius: 50px;
         transition: 0.3s;
         border-style: hidden;
         margin-bottom: 20px;
         margin-top: 40px;
       }
-      .mathsn:hover {
+      .mathsn:hover{
         border: 2px solid blue;
         font-size: 18px;
       }
@@ -40,9 +40,10 @@
 
     <p>
 
-        <a class="itso1" href="Rational numbers" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-20-27-54-140.jpeg"></a> 
-        <a class="itso1" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class"mathsn"> Chapter 2 </button></a>
-        <a class="itso1"
+        <a class="mathsn" href="Rational numbers" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-20-27-54-140.jpeg"></a> 
+        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class"mathsn"> Chapter 2 </button></a>
+        <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mathsn"> Chapter 3 </button></a>
+        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mathsn"> Chapter 4 </button></a>
 
     </p>
 
