--- a/maths_notes.html
+++ b/maths_notes.html
@@ -32,7 +32,8 @@
       }
     
     </style>
-      <p> this is where you download maths notes</p>
+      <p> this is where you download maths notes
+<br>made by byjus the learning app</p>
     
        <p>Chapter 1 <br>
 
@@ -41,7 +42,7 @@
     <p>
 
         <a class="mathsn" href="Rational numbers" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-20-27-54-140.jpeg"></a> 
-        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class"mathsn"> Chapter 2 </button></a>
+        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mathsn"> Chapter 2 </button></a>
         <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mathsn"> Chapter 3 </button></a>
         <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mathsn"> Chapter 4 </button></a>
 
