--- a/english_notes.html
+++ b/english_notes.html
@@ -55,15 +55,19 @@
         color: blue;
         cursor: pointer;
       }
-      .itso1image {
-        width: 200px;
-        border-radius: 10px;
+      .engn{
+        cursor: pointer;
+        width: 136px;
+        height: 34px;
+        border-radius: 50px;
         transition: 0.3s;
+        border-style: hidden;
+        margin-bottom: 20px;
+        margin-top: 40px;
       }
-      .itso1 :hover {
-        width: 215px;
-        border: 3px solid red;
-        filter: brightness(85%);
+      .engn:hover{
+        border: 2px solid blue;
+        font-size: 18px;
       }
     </style>
   </head>
@@ -72,12 +76,12 @@
     <p>It so happened-lesson-1<br>
     </br>How the Camel got his hump</p>
     <p>
-        <a class="itso1" href="It_so_happened_lesson_1.pdf" target="_blank"><img class="itso1image" src="it_so_happened_thumbnail.png"></a>
+        <a class="engn" href="It_so_happened_lesson_1.pdf" target="_blank"><button class="engn"> Chapter 1 supplementary book</button></a>
     </p>
  <p>Honeydew-lesson-2-poem<br>
     </br>Geography Lesson</p>
     <p>
-        <a class="itso1" href="Ch-2-poem-geography-lesson" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-07-50-09-395.jpeg"></a>
+        <a class="engn" href="Ch-2-poem-geography-lesson" target="_blank"><button class="engn"> Chapter 2 poem </button></a>
     </p>
   </body>
   <script src="scripts.js"></script>
