--- a/maths_notes.html
+++ b/maths_notes.html
@@ -16,6 +16,17 @@
       >
       
        <style>
+         body {
+
+        background-image: 134853-vertical-math-backgrounds-1920x1200.jpg;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: inherit;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+       }
+
+      
       .mathsn{
         cursor: pointer;
         width: 136px;
