--- a/maths_notes.html
+++ b/maths_notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="134853-vertical-math-backgrounds-1920x1200.jpg" />
+    <link rel="icon" type="image/x-icon" href="favicon-32×32.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
