--- a/maths_notes.html
+++ b/maths_notes.html
@@ -53,8 +53,10 @@
     <p>
 
         <a class="mathsn" href="Rational numbers" target="_blank"><button class="mathsn"> Chapter 1 </button></a> 
-        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mathsn"> Chapter 2 </button></a>
-        <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mathsn"> Chapter 3 </button></a>
+      <p> Chapter 2 </p>
+        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"> Chapter 2 </button><iframe src="https://onedrive.live.com/embed?cid=03FA036965A19F1E&resid=3FA036965A19F1E%211387&authkey=ADQ_EXsa0BR0Z2U&em=2" width="476" height="288" frameborder="0" scrolling="yes"></iframe></a>
+    
+        <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank">  </a>
         <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mathsn"> Chapter 4 </button></a>
  
     </p>
