--- a/maths_notes.html
+++ b/maths_notes.html
@@ -133,6 +133,27 @@
   </div>
 </div>
  
+<div class="container">
+  <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
+  <div class="middle">
+    <div class="text">
+    
+
+        <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mathsn"> Chapter 5 download </button></a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <img src="Screenshot_2022-08-21-18-51-02-212.jpeg" alt="Avatar" class="image">
+  <div class="middle">
+    <div class="text">
+    
+
+        <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mathsn"> Chapter 6 download </button></a>
+    </div>
+  </div>
+</div>
     </p>
 
  
