--- a/maths_notes.html
+++ b/maths_notes.html
@@ -91,6 +91,7 @@
     </style>
       <p> this is where you download maths notes
 <br>made by byjus the learning app</p>
+  <p class="description"> click on the pictures and press the download button</p>
     
        <p>Chapter 1 <br>
 
