--- a/maths_notes.html
+++ b/maths_notes.html
@@ -98,7 +98,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="Rational numbers" target="_blank"><button> Chapter 1 download </button></a>
+          <a class="mathsn" href="Rational numbers" target="_blank"><button class="text"> Chapter 1 download </button></a>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button> Chapter 2 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="text"> Chapter 2 download </button></a>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
       <img src="Screenshot_2022-08-20-20-08-24-026.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button> Chapter 3 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="text"> Chapter 3 download </button></a>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
       <img src="Screenshot_2022-08-20-20-09-07-317.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button> Chapter 4 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="text"> Chapter 4 download </button></a>
         </div>
       </div>
     </div>
@@ -138,7 +138,7 @@
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button> Chapter 5 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="text"> Chapter 5 download </button></a>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
       <img src="Screenshot_2022-08-21-18-51-02-212.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button> Chapter 6 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="text"> Chapter 6 download </button></a>
         </div>
       </div>
       </div>
