--- a/maths_notes.html
+++ b/maths_notes.html
@@ -36,8 +36,8 @@
       }
       .mathsn1 {
         border-radius: 9px;
-        width: 96px;
-        height: 35px;
+        width: 99px;
+        height: 38px;
         transition: 0.3s;
       }
       .mathsn1:hover {
@@ -80,7 +80,6 @@
         background-color: #04AA6D;
         color: white;
         font-size: 16px;
-        padding: 16px 32px;
         border-radius: 8px;
       }
 </style>
@@ -98,7 +97,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="Rational numbers" target="_blank"><button class="text"> Chapter 1 download </button></a>
+          <a class="mathsn" href="Rational numbers" target="_blank"><button class="mathsn1"> Chapter 1 download </button></a>
         </div>
       </div>
     </div>
@@ -108,7 +107,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="text"> Chapter 2 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mathsn1"> Chapter 2 download </button></a>
         </div>
       </div>
     </div>
@@ -118,7 +117,7 @@
       <img src="Screenshot_2022-08-20-20-08-24-026.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="text"> Chapter 3 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mathsn1"> Chapter 3 download </button></a>
         </div>
       </div>
     </div>
@@ -128,7 +127,7 @@
       <img src="Screenshot_2022-08-20-20-09-07-317.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="text"> Chapter 4 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mathsn1"> Chapter 4 download </button></a>
         </div>
       </div>
     </div>
@@ -138,7 +137,7 @@
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="text"> Chapter 5 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mathsn1"> Chapter 5 download </button></a>
         </div>
       </div>
     </div>
@@ -148,7 +147,7 @@
       <img src="Screenshot_2022-08-21-18-51-02-212.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="text"> Chapter 6 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mathsn1"> Chapter 6 download </button></a>
         </div>
       </div>
       </div>
