--- a/textbooks.html
+++ b/textbooks.html
@@ -23,7 +23,7 @@
 	  padding: 16px;
 	  font-size: 20px;
 	  cursor: pointer;
-      border-radius: 10px;
+          border-radius: 10px;
 	  border: 2px solid red;
 	  margin-left: 10px;
 	}
@@ -45,6 +45,7 @@
 	  min-width: 160px;
 	  z-index: 1;
 	  border-radius: 8px;
+	  margin-left: 10px;
 	}
 
 	/* Links inside the dropdown */
@@ -70,7 +71,7 @@
 	  padding: 16px;
 	  font-size: 20px;
 	  cursor: pointer;
-      border-radius: 10px;
+          border-radius: 10px;
 	  border: 2px solid red;
 	  margin-left: 10px;
 	}
