--- a/maths_notes.html
+++ b/maths_notes.html
@@ -57,6 +57,8 @@
         height: auto;
         transition: .5s ease;
         backface-visibility: hidden;
+        border-radius: 10px;
+        border: 2px solid red;
       }
       .middle {
         transition: .5s ease;
