--- a/maths_notes.html
+++ b/maths_notes.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maths notes</title>
     <p>
-      <a class="navbarhome" href="index.html"
-        ><button class="navbarhome" type="button">Home</button></a
+      <a class="navbaricon" href="index.html"
+        ><button class="navbaricons" type="button">Home</button></a
       >
       <a class="navbaricon" href="subjects.html"
         ><button class="navbaricons" type="button">back</button></a
