--- a/textbooks.html
+++ b/textbooks.html
@@ -74,6 +74,7 @@
           border-radius: 10px;
 	  border: 2px solid red;
 	  margin-left: 10px;
+	  transition: 0.4s;
 	}
 	.bookeng:hover {
 	  border: 2px solid blue;
