--- a/maths_notes.html
+++ b/maths_notes.html
@@ -87,8 +87,8 @@
 </style>
 </head>
 <body>
-  <p> this is where you download maths notes
-  <br>made by byjus the learning app</p>
+  <h1> this is where you download maths notes</h1>
+  <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
     
   <p>Chapter 1 <br>
