--- a/maths_notes.html
+++ b/maths_notes.html
@@ -34,17 +34,27 @@
         margin-top: 40px;
         border-radius: 9px;
       }
-      .mathsn1 {
-        border-radius: 9px;
-        width: 99px;
-        height: 38px;
-        transition: 0.3s;
-      }
-      .mathsn1:hover {
-        border: 2px solid blue;
-        width: 99px;
-        height: 38px;
-      }
+      body{
+ background-color: #e9c46a;
+}
+.mybutton{
+cursor: pointer;
+width: 136px;
+height: 34px;
+border-radius: 10px;
+transition: 0.3s;
+border-style: hidden;
+margin-bottom: 20px;
+margin-top: 40px;
+      
+.mybutton:hover span{
+display:none;
+}
+      
+.mybutton:hover:after{
+ border: 2px solid blue;
+        font-size: 18px;
+  }
       .container {
         position: relative;
         width: 18%;
@@ -99,7 +109,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="Rational numbers" target="_blank"><button class="mathsn1"> Chapter 1 download </button></a>
+          <a class="mathsn" href="Rational numbers" target="_blank"><button class="mybutton"> Chapter 1 download </button></a>
         </div>
       </div>
     </div>
@@ -109,7 +119,7 @@
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mathsn1"> Chapter 2 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mybutton"> Chapter 2 download </button></a>
         </div>
       </div>
     </div>
@@ -119,7 +129,7 @@
       <img src="Screenshot_2022-08-20-20-08-24-026.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mathsn1"> Chapter 3 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mybutton"> Chapter 3 download </button></a>
         </div>
       </div>
     </div>
@@ -129,7 +139,7 @@
       <img src="Screenshot_2022-08-20-20-09-07-317.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mathsn1"> Chapter 4 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mybutton"> Chapter 4 download </button></a>
         </div>
       </div>
     </div>
@@ -139,7 +149,7 @@
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mathsn1"> Chapter 5 download </button></a>
+          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mybutton"> Chapter 5 download </button></a>
         </div>
       </div>
     </div>
@@ -149,7 +159,7 @@
       <img src="Screenshot_2022-08-21-18-51-02-212.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mathsn1"> Chapter 6 download </button></a>
+          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mybutton"> Chapter 6 download </button></a>
         </div>
       </div>
       </div>
