some more reinnovations

--- a/maths_notes.html
+++ b/maths_notes.html
@@ -46,9 +46,13 @@ transition: 0.3s;
 border-style: hidden;
 margin-bottom: 20px;
 margin-top: 40px;
-      
+border: 2px solid red;
+}
+.mybutton:hover{
+  border: 2px solid blue;
+}
 .mybutton:hover span{
-display:none;
+  display:none;
 }
       
 .mybutton:hover:after{
@@ -59,7 +63,17 @@ display:none;
         position: relative;
         width: 18%;
       }
-
+      .mathsn1 {
+        border-radius: 9px;
+        width: 99px;
+        height: 38px;
+        transition: 0.3s;
+      }
+      .mathsn1:hover {
+        border: 2px solid blue;
+        width: 99px;
+        height: 38px;
+      }
       .image {
         opacity: 1;
         display: block;
