--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -477,55 +477,55 @@
         p.innerHTML = "this student's birthday is over";
         q.innerHTML = 2 - x;
       }
-      if (a.innerHTML == -1) {
+      if (a.innerHTML == 0) {
         a.innerHTML = "today is adharsh's birthday, dont forgot to wish him!"
       }
-      if (b.innerHTML == -1) {
+      if (b.innerHTML == 0) {
         b.innerHTML = "today is balaji's birthday, dont forgot to wish him!"
       }
-      if (c.innerHTML == -1) {
+      if (c.innerHTML == 0) {
         c.innerHTML = "today is dhikshan's birthday, dont forgot to wish him!"
       }
-      if (d.innerHTML == -1) {
+      if (d.innerHTML == 0) {
         d.innerHTML = "today is gokul's birthday, dont forgot to wish him!"
       }
-      if (e.innerHTML == -1) {
+      if (e.innerHTML == 0) {
         e.innerHTML = "today is harsha's birthday, dont forgot to wish him!"
       }
-      if (f.innerHTML == -1) {
+      if (f.innerHTML == 0) {
         f.innerHTML = "today is joshuva's birthday, dont forgot to wish him!"
       }
-      if (g.innerHTML == -1) {
+      if (g.innerHTML == 0) {
         g.innerHTML = "today is keerthivasan's birthday, dont forgot to wish him!"
       }
-      if (h.innerHTML == -1) {
+      if (h.innerHTML == 0) {
         h.innerHTML = "today is mithran's birthday, dont forgot to wish him!"
       }
-      if (i.innerHTML == -1) {
+      if (i.innerHTML == 0) {
         i.innerHTML = "today is nitin's birthday, dont forgot to wish him!"
       }
-      if (j.innerHTML == -1) {
+      if (j.innerHTML == 0) {
         j.innerHTML = "today is praveen's birthday, dont forgot to wish him!"
       }
-      if (k.innerHTML == -1) {
+      if (k.innerHTML == 0) {
         k.innerHTML = "today is sanjay's birthday, dont forgot to wish him!"
       }
-      if (l.innerHTML == -1) {
+      if (l.innerHTML == 0) {
         l.innerHTML = "today is shaswad's birthday, dont forgot to wish him!"
       }
       if (m.innerHTML == -1) {
         m.innerHTML = "today is seshavardhan's birthday, dont forgot to wish him!"
       }
-      if (n.innerHTML == -1) {
+      if (n.innerHTML == 0) {
         n.innerHTML = "today is srivarshan's birthday, dont forgot to wish him!"
       }
-      if (o.innerHTML == -1) {
+      if (o.innerHTML == -0 {
         o.innerHTML = "today is saichiranjeevi's birthday, dont forgot to wish him!"
       }
-      if (p.innerHTML == -1) {
+      if (p.innerHTML == 0) {
         p.innerHTML = "today is tinakaran's birthday, dont forgot to wish him!"
       }
-      if (q.innerHTML == -1) {
+      if (q.innerHTML == 0) {
         q.innerHTML = "today is vishnu's birthday, dont forgot to wish him!"
       }
     }, 10);
