--- a/english_notes.html
+++ b/english_notes.html
@@ -7,15 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>english notes</title>
-    <p>
-      <a class="navbarhome" href="index.html"
-        ><button class="navbarhome" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="subjects.html"
-        ><button class="navbaricons" type="button">back</button></a
-      >
-      <p class="info" id="greeting"></p>
-    </p>
     <style>
       body {
         background-image: url(https://st2.depositphotos.com/3591429/5246/i/950/depositphotos_52462701-stock-photo-people-and-english-concept.jpg);
@@ -72,6 +63,24 @@
     </style>
   </head>
   <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index.html">Home</a>
+      <a class="active" href="subjects.html">Subject notes</a>
+      <a href="textbooks.html">Textbook</a>
+      <a href="studentslist.html">Student list</a>
+      <a href="contact_us.html">Contact Us </a>
+      <a href="about.html">About us</a>
+      <a href="https://lachat.clobas.com" target="_blank">
+        our school website
+      </a>
+      <a href="subjects.html">back</a>
+    </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      ><img class="menuopener" src="menu-outline.svg"
+    /></span>
     <h1>Welcome to english notes area! choose any notes to view it</h1>
     <p>It so happened-lesson-1<br>
     </br>How the Camel got his hump</p>
