--- a/index.html
+++ b/index.html
@@ -7,101 +7,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homepage</title>
-<style>
-body {
-  font-family: "Lato", sans-serif;
-}
+    <style>
+      body {
+        font-family: "Lato", sans-serif;
+      }
 
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
+      .sidenav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
+      .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
 
-.sidenav a:hover {
-  color: #f1f1f1;
-}
+      .sidenav a:hover {
+        color: #f1f1f1;
+      }
 
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
+      .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
 
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
+      #main {
+        transition: margin-left 0.5s;
+        padding: 16px;
+      }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-.menuopener {
-  width: 35px;
-  height: 32px;
-  background-color: white;
-  border-radius: 4px;
-  transition: 0.4s;
-}
-.menuopener:hover {
-    background-color: #818181;
-}
-</style>
-</head>
-<body>
-
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Home</a>
-  <a href="subjects.html">Subject notes</a>
-  <a href="textbooks.html">Textbook</a>
-  <a href="studentslist.html">Student list</a>
-  <a href="contact_us.html">Contact Us </a>
-  <a href="about.html">About us</a>
-  <a href="https://lachat.clobas.com" target="_blank"> our school website </a>
-</div>
-
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img class="menuopener" src="menu-outline.svg"></span>
-
-
-<script>
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
-
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft= "0";
-}
-</script>
+      @media screen and (max-height: 450px) {
+        .sidenav {
+          padding-top: 15px;
+        }
+        .sidenav a {
+          font-size: 18px;
+        }
+      }
+      .menuopener {
+        width: 35px;
+        height: 32px;
+        background-color: white;
+        border-radius: 4px;
+        transition: 0.4s;
+      }
+      .menuopener:hover {
+        background-color: #818181;
+      }
+    </style>
   </head>
   <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a class="active" href="index.html">Home</a>
+      <a href="subjects.html">Subject notes</a>
+      <a href="textbooks.html">Textbook</a>
+      <a href="studentslist.html">Student list</a>
+      <a href="contact_us.html">Contact Us </a>
+      <a href="about.html">About us</a>
+      <a href="https://lachat.clobas.com" target="_blank">
+        our school website
+      </a>
+    </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      ><img class="menuopener" src="menu-outline.svg"
+    /></span>
     <h1>Welcome to class VIII-C educational website</h1>
     <p class="desc">
-      Press subject notes to get notes for every chapter, of every subject 
-
-
-
+      Press subject notes to get notes for every chapter, of every subject
     </p>
     <version>1.6.0</version>
   </body>
