--- a/maths_notes.html
+++ b/maths_notes.html
@@ -7,14 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maths notes</title>
-    <p>
-      <a class="navbaricon" href="index.html"
-        ><button class="navbaricons" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="subjects.html"
-        ><button class="navbaricons" type="button">back</button></a
-      >
-    </p>
     <style>
        body {
         background-image: url(134853-vertical-math-backgrounds-1920x1200.jpg);
@@ -111,6 +103,24 @@ border: 2px solid red;
 </style>
 </head>
 <body>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+      >&times;</a
+    >
+    <a href="index.html">Home</a>
+    <a class="active" href="subjects.html">Subject notes</a>
+    <a href="textbooks.html">Textbook</a>
+    <a href="studentslist.html">Student list</a>
+    <a href="contact_us.html">Contact Us </a>
+    <a href="about.html">About us</a>
+    <a href="https://lachat.clobas.com" target="_blank">
+      our school website
+    </a>
+    <a href="subjects.html">back</a>
+  </div>
+  <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+    ><img class="menuopener" src="menu-outline.svg"
+  /></span>
   <h1> this is where you download maths notes</h1>
   <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
@@ -178,6 +188,7 @@ border: 2px solid red;
       </div>
       </div>
     </p>
+    <script src="scripts.js"></script>
 </body>
 </html>
  
