--- a/studentslist.html
+++ b/studentslist.html
@@ -7,18 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>students list</title>
-    <p>
-      <a class="navbarhome" href="index.html"
-        ><button class="navbarhome" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="birthdaylist.html"
-        ><button class="navbaricons" type="button">birthday list</button></a
-      >
-      <a class="navbaricon" href="index.html"
-        ><button class="navbaricons" type="button">back</button></a
-      >
-    </p>
-    <p class="info" id="greeting"></p>
   </head>
   <style>
     .navbarhome {
@@ -38,6 +26,24 @@
     }
   </style>
   <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index.html">Home</a>
+      <a href="subjects.html">Subject notes</a>
+      <a href="textbooks.html">Textbook</a>
+      <a class="active" href="studentslist.html">Student list</a>
+      <a href="birthdaylist.html">   birthday list</a>
+      <a href="contact_us.html">Contact Us </a>
+      <a href="about.html">About us</a>
+      <a href="https://lachat.clobas.com" target="_blank">
+        our school website
+      </a>
+    </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      ><img class="menuopener" src="menu-outline.svg"
+    /></span>
     <h1>students list</h1>
     <table>
       <tr>
