--- a/subjects.html
+++ b/subjects.html
@@ -7,15 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>subjects</title>
-    <p>
-      <a class="navbarhome" href="index.html"
-        ><button class="navbarhome" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="index.html"
-        ><button class="navbaricons" type="button">back</button></a
-      >
-      <p class="info" id="greeting"></p>
-    </p>
     <style>
       .navbarhome {
         font-size: large;
@@ -64,6 +55,23 @@
     </style>
   </head>
   <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index.html">Home</a>
+      <a class="active" href="subjects.html">Subject notes</a>
+      <a href="textbooks.html">Textbook</a>
+      <a href="studentslist.html">Student list</a>
+      <a href="contact_us.html">Contact Us </a>
+      <a href="about.html">About us</a>
+      <a href="https://lachat.clobas.com" target="_blank">
+        our school website
+      </a>
+    </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      ><img class="menuopener" src="menu-outline.svg"
+    /></span>
     <h1>
       Welcome to the subjects area! click on any subject to view notes for that
       subject
@@ -72,8 +80,12 @@
       <a class="subject" href="english_notes.html"
         ><button class="subject" type="button">English</button></a
       >
-      <a class="subscie" href="science_notes.html"><button class="subsci" type="button">Science</button></a>
-      <a class="subscie" href="maths_notes.html"><button class="subsci" type="button">mathematics</button></a>
+      <a class="subscie" href="science_notes.html"
+        ><button class="subsci" type="button">Science</button></a
+      >
+      <a class="subscie" href="maths_notes.html"
+        ><button class="subsci" type="button">mathematics</button></a
+      >
     </p>
   </body>
   <script src="scripts.js"></script>
