--- a/textbooks.html
+++ b/textbooks.html
@@ -7,102 +7,122 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>text books</title>
-    <p>
-      <a class="navbaricon" href="index.html"
-        ><button class="navbaricons" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="index.html"
-        ><button class="navbaricons" type="button">back</button></a
-      >
-    </p>
     <style>
-	/* Style The Dropdown Button */
-	.dropbtn {
-	  background-color: #FFAACC;
-	  color: green;
-	  padding: 16px;
-	  font-size: 20px;
-	  cursor: pointer;
-          border-radius: 10px;
-	  border: 2px solid red;
-	  margin-left: 10px;
-	}
-	.dropbtn:hover {
-	  border: 2px solid blue;
-	}
+      /* Style The Dropdown Button */
+      .dropbtn {
+        background-color: #ffaacc;
+        color: green;
+        padding: 16px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: 2px solid red;
+        margin-left: 10px;
+      }
+      .dropbtn:hover {
+        border: 2px solid blue;
+      }
 
-	/*  position the dropdown content */
-	.dropdown {
-	  position: relative;
-	  display: inline-block;
-	}
+      /*  position the dropdown content */
+      .dropdown {
+        position: relative;
+		display: inline-block
+      }
 
-	/* Dropdown Content hidden by Default */
-	.dropdown-content {
-	  display: none;
-	  position: absolute;
-	  background-color: #0377fc;
-	  min-width: 160px;
-	  z-index: 1;
-	  border-radius: 8px;
-	  margin-left: 10px;
-	}
+      /* Dropdown Content hidden by Default */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #0377fc;
+        min-width: 160px;
+        z-index: 1;
+        border-radius: 8px;
+        margin-left: 10px;
+      }
 
-	/* Links inside the dropdown */
-	.dropdown-content a {
-	  color: black;
-	  padding: 12px 16px;
-	  text-decoration: none;
-	  display: block;
-	}
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
 
-	/* Change color of dropdown links on hover */
-	.dropdown-content a:hover {
-	background-color: #254973;
-	}
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {
+        background-color: #254973;
+      }
 
-	/* Show the dropdown menu on hover */
-	.dropdown:hover .dropdown-content {
-	  display: block;
-	}
-	.bookeng {
-	  background-color: #FFAACC;
-	  color: green;
-	  padding: 16px;
-	  font-size: 20px;
-	  cursor: pointer;
-          border-radius: 10px;
-	  border: 2px solid red;
-	  margin-left: 10px;
-	  transition: 0.4s;
-	}
-	.bookeng:hover {
-	  border: 2px solid blue;
-	}
-</style>
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+      .bookeng {
+        background-color: #ffaacc;
+        color: green;
+        padding: 16px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: 2px solid red;
+        margin-left: 10px;
+        transition: 0.4s;
 
-</head>
-<body>
+      }
+      .bookeng:hover {
+        border: 2px solid blue;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index.html">Home</a>
+      <a href="subjects.html">Subject notes</a>
+      <a class="active" href="textbooks.html">Textbook</a>
+      <a href="studentslist.html">Student list</a>
+      <a href="contact_us.html">Contact Us </a>
+      <a href="about.html">About us</a>
+      <a href="https://lachat.clobas.com" target="_blank">
+        our school website
+      </a>
+    </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      ><img class="menuopener" src="menu-outline.svg"
+    /></span>
     <div class="dropdown">
-	  <button class="dropbtn">English Books</button>
-	  <div class="dropdown-content">
-		<a href="honeydew-8th-class-download-complete-book-d194e96c.zip" download>Honeydew</a>
-		<a href="its-so-happened-8th-download-complete-book-4c6a9a84.zip" download>Its so happend...</a>
-		
-		
-	  </div>
-	</div>
-	    <div class="dropdown">
-	  <button class="dropbtn">Social Science</button>
-	  <div class="dropdown-content">
-		<a href="history.zip" download>history</a>
-		<a href="civics.zip" download>civics</a>
-		<a href="hess4dd.zip" download>Geography </a>
-		  </div>
-		</div>
-	<a href="Hindi.zip" download><button class="bookeng">Hindi </button></a>
-	<a href="Science.zip" download><button class="bookeng">Science</button></a>
-	<a href="Mathematics.zip" download><button class="bookeng">Maths </button></a>
-	<a href="class 8th Tamil_CBSE (1).pdf" download><button class="bookeng">Tamil</button></a>
-</body>
+      <button class="dropbtn">English Books</button>
+      <div class="dropdown-content">
+        <a
+          href="honeydew-8th-class-download-complete-book-d194e96c.zip"
+          download
+          >Honeydew</a
+        >
+        <a
+          href="its-so-happened-8th-download-complete-book-4c6a9a84.zip"
+          download
+          >Its so happend...</a
+        >
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn">Social Science</button>
+      <div class="dropdown-content">
+        <a href="history.zip" download>history</a>
+        <a href="civics.zip" download>civics</a>
+        <a href="hess4dd.zip" download>Geography </a>
+      </div>
+    </div>
+    <a href="Hindi.zip" download><button class="bookeng">Hindi</button></a>
+    <a href="Science.zip" download><button class="bookeng">Science</button></a>
+    <a href="Mathematics.zip" download
+      ><button class="bookeng">Maths</button></a
+    >
+    <a href="class 8th Tamil_CBSE (1).pdf" download
+      ><button class="bookeng">Tamil</button></a
+    >
+  </body>
+  <script src="scripts.js"></script>
 </html>
