--- a/textbooks.html
+++ b/textbooks.html
@@ -93,7 +93,9 @@
       ><img class="menuopener" src="menu-outline.svg"
     /></span>
 	  <br>
-	  <h1></h1>
+	  <h1>Textbook section</h1>
+	  <br>
+	  <p>Here you can dowmload the textbook in pdf form</p>
 	  <br>
     <div class="dropdown">
       <button class="dropbtn">English Books</button>
