--- a/index.html
+++ b/index.html
@@ -72,23 +72,27 @@
     </style>
   </head>
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <a class="active" href="index.html">Home</a>
-      <a href="subjects.html">Subject notes</a>
-      <a href="textbooks.html">Textbook</a>
-      <a href="studentslist.html">Student list</a>
-      <a href="contact_us.html">Contact Us </a>
-      <a href="about.html">About us</a>
-      <a href="https://lachat.clobas.com" target="_blank">
-        our school website
-      </a>
-    </div>
-    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-      ><img class="menuopener" src="menu-outline.svg"
-    /></span>
+    <nav class="navbar">
+      <p>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <a class="active" href="index.html">Home</a>
+          <a href="subjects.html">Subject notes</a>
+          <a href="textbooks.html">Textbook</a>
+          <a href="studentslist.html">Student list</a>
+          <a href="contact_us.html">Contact Us </a>
+          <a href="about.html">About us</a>
+          <a href="https://lachat.clobas.com" target="_blank">
+            our school website
+          </a>
+        </div>
+        <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+          ><img class="menuopener" src="menu-outline.svg"
+        /></span>
+      </p>
+    </nav>
     <h1>Welcome to class VIII-C educational website</h1>
     <p class="desc">
       Press subject notes to get notes for every chapter, of every subject
