--- a/maths_notes.html
+++ b/maths_notes.html
@@ -103,24 +103,28 @@ border: 2px solid red;
 </style>
 </head>
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-      >&times;</a
-    >
-    <a href="index.html">Home</a>
-    <a class="active" href="subjects.html">Subject notes</a>
-    <a href="textbooks.html">Textbook</a>
-    <a href="studentslist.html">Student list</a>
-    <a href="contact_us.html">Contact Us </a>
-    <a href="about.html">About us</a>
-    <a href="https://lachat.clobas.com" target="_blank">
-      our school website
-    </a>
-    <a href="subjects.html">back</a>
-  </div>
-  <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-    ><img class="menuopener" src="menu-outline.svg"
-  /></span>
+  <nav class="navbar">
+    <p>
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <a class="active" href="index.html">Home</a>
+        <a href="subjects.html">Subject notes</a>
+        <a href="textbooks.html">Textbook</a>
+        <a href="studentslist.html">Student list</a>
+        <a href="contact_us.html">Contact Us </a>
+        <a href="about.html">About us</a>
+        <a href="https://lachat.clobas.com" target="_blank">
+          our school website
+        </a>
+      </div>
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+        ><img class="menuopener" src="menu-outline.svg"
+      /></span>
+      <a href="subjects.html" class="navbaritem">Back</a>
+    </p>
+  </nav>
   <h1> this is where you download maths notes</h1>
   <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
