--- a/science_notes.html
+++ b/science_notes.html
@@ -72,24 +72,28 @@
     </style>
   </head>
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <a href="index.html">Home</a>
-      <a class="active" href="subjects.html">Subject notes</a>
-      <a href="textbooks.html">Textbook</a>
-      <a href="studentslist.html">Student list</a>
-      <a href="contact_us.html">Contact Us </a>
-      <a href="about.html">About us</a>
-      <a href="https://lachat.clobas.com" target="_blank">
-        our school website
-      </a>
-      <a href="subjects.html">back</a>
-    </div>
-    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-      ><img class="menuopener" src="menu-outline.svg"
-    /></span>
+    <nav class="navbar">
+      <p>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <a class="active" href="index.html">Home</a>
+          <a href="subjects.html">Subject notes</a>
+          <a href="textbooks.html">Textbook</a>
+          <a href="studentslist.html">Student list</a>
+          <a href="contact_us.html">Contact Us </a>
+          <a href="about.html">About us</a>
+          <a href="https://lachat.clobas.com" target="_blank">
+            our school website
+          </a>
+        </div>
+        <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+          ><img class="menuopener" src="menu-outline.svg"
+        /></span>
+        <a href="subjects.html" class="navbaritem">Back</a>
+      </p>
+    </nav>
     <h1>
       Welcome to science notes area! Here, you can get all the answers for every
       chapter of the allern active QR book. Just choose any chapter
