--- a/studentslist.html
+++ b/studentslist.html
@@ -26,24 +26,30 @@
     }
   </style>
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <a href="index.html">Home</a>
-      <a href="subjects.html">Subject notes</a>
-      <a href="textbooks.html">Textbook</a>
-      <a class="active" href="studentslist.html">Student list</a>
-      <a href="birthdaylist.html">   birthday list</a>
-      <a href="contact_us.html">Contact Us </a>
-      <a href="about.html">About us</a>
-      <a href="https://lachat.clobas.com" target="_blank">
-        our school website
-      </a>
-    </div>
-    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-      ><img class="menuopener" src="menu-outline.svg"
-    /></span>
+    <nav class="navbar">
+      <p>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <a href="index.html">Home</a>
+          <a href="subjects.html">Subject notes</a>
+          <a href="textbooks.html">Textbook</a>
+          <a class="active" href="studentslist.html">Student list</a>
+          <a href="birthdaylist.html">birthday list</a>
+          <a href="contact_us.html">Contact Us </a>
+          <a href="about.html">About us</a>
+          <a href="https://lachat.clobas.com" target="_blank">
+            our school website
+          </a>
+        </div>
+        <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+          ><img class="menuopener" src="menu-outline.svg"
+        /></span>
+        <a class="navbaritem" href="birthdaylist.html">birthday list</a>
+        <a href="index.html" class="navbaritem">Back</a>
+      </p>
+    </nav>
     <h1>students list</h1>
     <table>
       <tr>
