--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
       .menuopener:hover {
         background-color: #818181;
       }
+      .end {
+        text-align: center;
+        font-size: 19px;
+        margin-top: 1000px;
+      }
+      .contact {
+        font-size: 17px;
+        margin-top: 1000px;
+        margin-left: 722px;
+      }
     </style>
   </head>
   <body>
@@ -94,6 +104,8 @@
       Press subject notes to get notes for every chapter, of every subject
     </p>
     <version>1.6.0</version>
+    <p class="end">Owned by and mady by 8-c-computer guys.</p>
+    <a class="contact" href="mailto:8.c.webpage@gmail.com">contact us</a>
   </body>
   <script src="scripts.js"></script>
 </html>
