--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         margin-top: 1000px;
         margin-left: 722px;
       }
+      .body {
+    font-family: 'Aladin';font-size: 22px;
+}
+
     </style>
   </head>
   <body>
