--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         /></span>
       </p>
     </nav>
-    <h1>Welcome to class VIII-C educational website</h1>
+    <h1 class="body">Welcome to class VIII-C educational website</h1>
     <p class="desc">
       Press subject notes to get notes for every chapter, of every subject
     </p>
