--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
       }
       .contributors {
         font-size: large;
+        font-color:#000000
       }
       .navbaricons {
         font-size: large;
@@ -80,7 +81,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <h1>About us</h1>
+    <h1 font-color=#000000>About us</h1>
     <p class="contributors">
       co-founder and developer: Nitin Kamal.P.K
       <br />
