--- a/english_notes.html
+++ b/english_notes.html
@@ -10,7 +10,7 @@
     <title>english notes</title>
     <style>
       body {
-        background-image: url(https://st2.depositphotos.com/3591429/5246/i/950/depositphotos_52462701-stock-photo-people-and-english-concept.jpg);
+        background-image: url(OIP.jpeg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
