--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body>
     <style>
       body {
-        background-image: url(https://cdn.pixabay.com/photo/2016/03/11/08/02/usa-1249880__340.jpg);
+        background-image: url(about_banner2.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: inherit;
