--- a/subjects.html
+++ b/subjects.html
@@ -100,6 +100,15 @@
       <a class="subscie" href="maths_notes.html"
         ><button class="subsci" type="button">mathematics</button></a
       >
+       <a class="subscie" href="geo.html"
+        ><button class="subsci" type="button">Geography</button></a
+      >
+       <a class="subscie" href="history.html"
+        ><button class="subsci" type="button">History</button></a
+      >
+       <a class="subscie" href="civics.html"
+        ><button class="subsci" type="button">Civics</button></a
+      >
     </p>
   </body>
   <script src="scripts.js"></script>
