--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       }
       .contributors {
         font-size: large;
-        font-color:#000000
+        color:#000000;
       }
       .navbaricons {
         font-size: large;
@@ -81,8 +81,8 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <h1 font-color=#000000>About us</h1>
-    <p class="contributors">
+    <h1 id="centre" color=#000000>About us</h1>
+    <p id="centre" class="contributors">
       co-founder and developer: Nitin Kamal.P.K
       <br />
       founder and developer: Vishnu Vikram
