--- a/civics.html
+++ b/civics.html
@@ -92,8 +92,8 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
-  <h1> civics notes </h1>
-  <a href="c1.pdf"><button class="gn">chapter 1</button></a>
+  <h1 id="centre"> civics notes </h1>
+  <a id="centre" href="c1.pdf"><button class="gn">chapter 1</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
