--- a/english_notes.html
+++ b/english_notes.html
@@ -92,15 +92,15 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
-    <h1>Welcome to english notes area! choose any notes to view it</h1>
-    <p>It so happened-lesson-1<br>
+    <h1 id="centre">Welcome to english notes area! choose any notes to view it</h1>
+    <p id="centre">It so happened-lesson-1<br>
     </br>How the Camel got his hump</p>
-    <p>
+    <p id="centre">
         <a class="engn" href="It_so_happened_lesson_1.pdf" target="_blank"><button class="engn"> Chapter 1 supplementary book</button></a>
     </p>
- <p>Honeydew-lesson-2-poem<br>
+ <p id="centre">Honeydew-lesson-2-poem<br>
     </br>Geography Lesson</p>
-    <p>
+    <p id="centre">
         <a class="engn" href="Ch-2-poem-geography-lesson" target="_blank"><button class="engn"> Chapter 2 poem </button></a>
     </p>
   </body>
