--- a/history.html
+++ b/history.html
@@ -92,8 +92,8 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
-  <h1> history notes </h1>
-  <a href="h1.pdf"><button class="gn">chapter 1</button></a>
+  <h1 id="centre"> history notes </h1>
+  <a id="centre" href="h1.pdf"><button class="gn">chapter 1</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
