--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@
         /></span>
       </p>
     </nav>
-    <h1 class="body">Welcome to class VIII-C educational website</h1>
-    <p class="desc">
+    <h1 id="centre" class="body">Welcome to class VIII-C educational website</h1>
+    <p id="centre" class="desc">
       Press subject notes to get notes for every chapter, of every subject
     </p>
-    <version>1.7.2</version>
     <p class="end">Owned by and mady by 8-c-computer guys.</p>
     <a class="contact" href="mailto:8.c.webpage@gmail.com">contact us</a>
   </body>
