--- a/science_notes.html
+++ b/science_notes.html
@@ -101,7 +101,7 @@
         <a href="subjects.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <h1>
+    <h1 id="centre">
       Welcome to science notes area! Here, you can get all the answers for every
       chapter of the allern active QR book. Just choose any chapter
     </h1>
