--- a/studentslist.html
+++ b/studentslist.html
@@ -58,8 +58,8 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <h1>students list</h1>
-    <table>
+    <h1 id="centre">students list</h1>
+    <table id="centre">
       <tr>
         <th>name</th>
         <th>roll no.</th>
