--- a/subjects.html
+++ b/subjects.html
@@ -86,11 +86,11 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <h1>
+    <h1 id="centre">
       Welcome to the subjects area! click on any subject to view notes for that
       subject
     </h1>
-    <p>
+    <p id="centre">
       <a class="subject" href="english_notes.html"
         ><button class="subject" type="button">English</button></a
       >
