--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -73,7 +73,7 @@
         <a href="studentslist.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <table>
+    <table id="centre">
       <tr>
         <th>Name</th>
         <th>birth date</th>
