--- a/contact_us.html
+++ b/contact_us.html
@@ -78,10 +78,10 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <a href="mailto:vishnuvikram828@gmail.com"
+    <a id="centre" href="mailto:vishnuvikram828@gmail.com"
       ><button class="emailvishnu" type="button">Vishnu Vikram</button></a
     ><br />
-    <a href="mailto:nitinipun2110@gmail.com"
+    <a id="centre" href="mailto:nitinipun2110@gmail.com"
       ><button class="emailnitin" type="button">Nitin Kamal.P.K</button></a
     >
   </body>
