--- a/geo.html
+++ b/geo.html
@@ -92,8 +92,8 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
-  <h1> geography notes </h1>
-  <a href="g1.pdf"><button class="gn">chapter 1</button></a>
+  <h1 id="centre"> geography notes </h1>
+  <a id="centre" href="g1.pdf"><button class="gn">chapter 1</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
