--- a/textbooks.html
+++ b/textbooks.html
@@ -105,10 +105,10 @@
       </p>
     </nav>
 	  <br>
-	  <h1>Textbook section</h1>
+	  <h1 id="centre">Textbook section</h1>
 	  <br>
 	
-    <div class="dropdown">
+    <div id="centre" class="dropdown">
       <button class="dropbtn">English Books</button>
       <div class="dropdown-content">
         <a
@@ -123,7 +123,7 @@
         >
       </div>
     </div>
-    <div class="dropdown">
+    <div id="centre" class="dropdown">
       <button class="dropbtn">Social Science</button>
       <div class="dropdown-content">
         <a href="history.zip" download>history</a>
@@ -131,12 +131,12 @@
         <a href="hess4dd.zip" download>Geography </a>
       </div>
     </div>
-    <a href="Hindi.zip" download><button class="bookeng">Hindi</button></a>
-    <a href="Science.zip" download><button class="bookeng">Science</button></a>
-    <a href="Mathematics.zip" download
+    <a id="centre" href="Hindi.zip" download><button class="bookeng">Hindi</button></a>
+    <a id="centre" href="Science.zip" download><button class="bookeng">Science</button></a>
+    <a id="centre" href="Mathematics.zip" download
       ><button class="bookeng">Maths</button></a
     >
-    <a href="class 8th Tamil_CBSE (1).pdf" download
+    <a id="centre" href="class 8th Tamil_CBSE (1).pdf" download
       ><button class="bookeng">Tamil</button></a
     >
   </body>
