--- a/civics.html
+++ b/civics.html
@@ -94,6 +94,8 @@
     </nav>
   <h1 id="centre"> civics notes </h1>
   <a id="centre" href="c1.pdf"><button class="gn">chapter 1</button></a>
+  <br>
+   <a id="centre" href="c2.pdf"><button class="gn">chapter 2</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
