--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homepage</title>
     <style>
+      body {
+  background-image: url(https://media.istockphoto.com/photos/mountain-of-books-education-dark-background-picture-id1195277271?k=20&m=1195277271&s=170667a&w=0&h=F93ZN7IrlYLpAEMwUAeEl1wRQuFmIKlE8Apa-qPDbgg=);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: inherit;
+  background-attachment: fixed;
+  font-family: 'Aladin';
+  font-size: 20px;
+  margin-bottom: 90px;
+}
+      
       .sidenav {
         height: 100%;
         width: 0;
