--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -73,7 +73,8 @@
         <a href="studentslist.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <table id="centre">
+    <h1>Birthday list</h1>
+    <table class="centre">
       <tr>
         <th>Name</th>
         <th>birth date</th>
