--- a/contact_us.html
+++ b/contact_us.html
@@ -29,6 +29,7 @@
         border-radius: 10px;
         transition: 0.3s;
         border-style: hidden;
+        text-align: center;
       }
       .emailvishnu:hover {
         border: 2px solid blue;
@@ -42,6 +43,7 @@
         transition: 0.3s;
         border-style: hidden;
         margin-top: 10px;
+        text-align: center;
       }
       .emailnitin:hover {
         font-size: 16px;
@@ -78,10 +80,10 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
-    <a id="centre" href="mailto:vishnuvikram828@gmail.com"
+    <a href="mailto:vishnuvikram828@gmail.com"
       ><button class="emailvishnu" type="button">Vishnu Vikram</button></a
     ><br />
-    <a id="centre" href="mailto:nitinipun2110@gmail.com"
+    <a href="mailto:nitinipun2110@gmail.com"
       ><button class="emailnitin" type="button">Nitin Kamal.P.K</button></a
     >
   </body>
