--- a/studentslist.html
+++ b/studentslist.html
@@ -59,7 +59,7 @@
       </p>
     </nav>
     <h1 id="centre">students list</h1>
-    <table id="centre">
+    <table class="centre">
       <tr>
         <th>name</th>
         <th>roll no.</th>
