--- a/textbooks.html
+++ b/textbooks.html
@@ -19,6 +19,7 @@
         border-radius: 10px;
         border: 2px solid red;
         margin-left: 10px;
+        text-align: center;
       }
       .dropbtn:hover {
         border: 2px solid blue;
@@ -27,7 +28,7 @@
       /*  position the dropdown content */
       .dropdown {
         position: relative;
-		display: inline-block
+		    display: inline-block;
       }
 
       /* Dropdown Content hidden by Default */
@@ -68,10 +69,15 @@
         border: 2px solid red;
         margin-left: 10px;
         transition: 0.4s;
-
       }
       .bookeng:hover {
         border: 2px solid blue;
+      }
+      .sidetext {
+        margin-left: 267px;
+      }
+      .sidetext1 {
+        margin-left: 267px;
       }
     </style>
   </head>
@@ -109,8 +115,8 @@
 	  <br>
 	
     <div id="centre" class="dropdown">
-      <button class="dropbtn">English Books</button>
-      <div class="dropdown-content">
+      <button class="dropbtn sidetext">English Books</button>
+      <div class="dropdown-content sidetext1">
         <a
           href="honeydew-8th-class-download-complete-book-d194e96c.zip"
           download
